--- a/.inputrc
+++ b/.inputrc
@@ -3,16 +3,16 @@
 $include /etc/inputrc
 
 set editing-mode vi
-set show-mode-in-prompt on
+#set show-mode-in-prompt on
 
 #Set cursor for insert and command modes
-$if term-linux
-    set vi-ins-mode-string \1\e[?0c\2
-    set vi-cmd-mode-string \1\e[?8c\2
-$else
-    set vi-ins-mode-string \1\e[6 q\2
-    set vi-cmd-mode-string \1\e[2 q\2
-$endif
+#$if term-linux
+    #set vi-ins-mode-string \1\e[?0c\2
+    #set vi-cmd-mode-string \1\e[?8c\2
+#$else
+    #set vi-ins-mode-string \1\e[6 q\2
+    #set vi-cmd-mode-string \1\e[2 q\2
+#$endif
 
 #Enable navigating through command history with j and k
 $if mode=vi
